--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="Pig.js"></script>
     <script src="Log.js"></script>
     <script src="Bird.js"></script>
+    <script src="Slingshot.js"></script>
+
         <script src="Glass.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
